commerce web site  frontend

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rontend",
+  "name": "front-end",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:rontend": "node dist/rontend/server/server.mjs"
+    "serve:ssr:FrontEnd": "node dist/front-end/server/server.mjs"
   },
   "private": true,
   "dependencies": {
