--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,9 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "stylePreprocessorOptions": {
+            "includePaths": ["src/styles"]
+            },
             "assets": [
               {
                 "glob": "**/*",
@@ -33,7 +36,7 @@
             ],
             "styles": [
                 "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                "src/styles.scss"
+                "src/styles/styles.scss"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
